--- a/nginx.conf
+++ b/nginx.conf
@@ -2,21 +2,25 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/projet_miage/public;  # Cela doit pointer vers le répertoire public
+    # Chemin racine pointant vers le répertoire public de Symfony
+    root /var/www/symfony-project;
 
     index index.php index.html index.htm;
 
+    # Gestion des URLs (Symfony : utilise index.php comme fallback)
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;  # Redirige vers index.php pour Symfony
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    # Configuration pour exécuter les scripts PHP
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;  # Correspond à PHP-FPM
+        fastcgi_pass app:9000;  # Correspond au conteneur PHP-FPM
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
+    # Sécurité : Empêche l'accès aux fichiers .ht*
     location ~ /\.ht {
         deny all;
     }
