--- a/symfony-project/.env
+++ b/symfony-project/.env
@@ -18,7 +18,10 @@
 APP_ENV=dev
 APP_SECRET=2e0f98063de941ffda83225ededf0a25
 
-DATABASE_URL=mysql://user:password@db:3306/symfony_db
+DATABASE_URL="mysql://user:password@db:3306/devDB?serverVersion=8.0"
+
+
+# DATABASE_URL="mysql://user:password@db:3306/symfony_db"
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
