commit page developper

--- a/symfony-project/.env
+++ b/symfony-project/.env
@@ -18,8 +18,9 @@
 APP_ENV=dev
 APP_SECRET=2e0f98063de941ffda83225ededf0a25
 
-DATABASE_URL="mysql://user:password@db:3306/devDB?serverVersion=8.0"
+# DATABASE_URL="mysql://user:password@db:3306/devDB?serverVersion=8.0"
 
+DATABASE_URL="mysql://root:@127.0.0.1:3306/adopte_dev?serverVersion=mariadb-10.4.11&charset=utf8mb4"
 
 # DATABASE_URL="mysql://user:password@db:3306/symfony_db"
 ###< symfony/framework-bundle ###
