--- a/symfony-project/.env
+++ b/symfony-project/.env
@@ -19,8 +19,9 @@ APP_ENV=dev
 APP_SECRET=2e0f98063de941ffda83225ededf0a25
 
 # DATABASE_URL="mysql://user:password@db:3306/devDB?serverVersion=8.0"
-
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/adopte_dev?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://root:root@:3306/adopte_dev?serverVersion=8.0"
+DATABASE_URL="mysql://root:root@db:3306/adopte_symfony"
+# DATABASE_URL="mysql://root:@db:3306/adopte_dev?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL=mysql://root:@127.0.0.1:3306/symfony-project?serverVersion=5.7
 
 # DATABASE_URL="mysql://user:password@db:3306/symfony_db"
@@ -33,5 +34,5 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/adopte_dev?serverVersion=8.0.32&c
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
