--- a/symfony-project/composer.json
+++ b/symfony-project/composer.json
@@ -15,7 +15,10 @@
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/mailer": "6.4.*",
+        "symfony/password-hasher": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/templating": "^3.4",
         "symfony/twig-bundle": "6.4.*",
