--- a/symfony-project/composer.json
+++ b/symfony-project/composer.json
@@ -20,6 +20,7 @@
         "symfony/mailer": "6.4.*",
         "symfony/password-hasher": "6.4.*",
         "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
         "symfony/templating": "^3.4",
         "symfony/twig-bundle": "6.4.*",
         "symfony/yaml": "6.4.*"
