--- a/symfony-project/config/services.yaml
+++ b/symfony-project/config/services.yaml
@@ -6,7 +6,8 @@
 parameters:
     uploads_directory: '%kernel.project_dir%/public/uploads'
     
-services:
+services:   
+    App\Entity\Company: ~
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
@@ -20,6 +21,7 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
